[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/enemy_movement.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 6.192, 202.773, -86.2199, 3.00268, 80.5812, 2.51404, 102.796, 259.919, 0, 0, -10.6702, 57.4548, 178.99, 345.638, 0, 0, 102.221, 22.9659, 218.992, 422.376, 0, 0, -6.30437, 110.777, 306.072, 517.619, 0, 0, 104.923, -62.5934, 421.724, 563.88, 0, 0, 70.6991, 39.6275, 579.555, 558.438, 0, 0, 8.55594, -92.7644, 655.75, 528.504, 0, 0, 70.2487, -24.3169, 704.732, 425.097, 0, 0, 2.25156, -81.5065, 779.294, 308.085, 0, 0, 63.9444, -28.3697, 893.585, 206.038, 0, 0, -1.35094, -55.8387, 942.568, 106.713, 0, 0, 0, 0, 1024.2, 76.7799 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 6.96553, 461.718, -136.462, 62.7726, 154.885, -93.4766, 154.769, 278.019, 0, 0, 204.011, -36.8448, 349.025, 193.56, 0, 0, 33.4332, 183.542, 562.284, 246.347, 0, 0, 182.177, -46.3972, 720.645, 398.374, 0, 0, 52.538, 38.8917, 978.246, 465.941, 0, 0, 0, 0, 1037.37, 440.603 )
}

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 281.293, -1.0904, -87.0662, -82.184, 28.4796, 44.7537, 341.14, 184.438, 0, 0, 86.2525, 0.813703, 478.79, 244.285, 0, 0, 72.4196, 27.6659, 596.491, 276.204, 0, 0, 30.107, 36.6166, 696.237, 357.996, 0, 0, 7.32333, 62.6551, 726.161, 443.778, 0, 0, -4.88222, 41.4989, 722.171, 531.555, 0, 0, -12.2055, 6.50962, 688.257, 585.418, 0, 0, 0, 0, 682.273, 605.367 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 13.3673, 126.722, 830.131, 7.47017, 0, 0, -92.5018, -1.60408, 657.178, 145.833, 0, 0, -43.8448, 67.3712, 518.814, 193.168, 0, 0, -67.3712, 13.3673, 325.834, 264.17, 0, 0, 174.844, 87.1548, 311.27, 338.813, 0, 0, -84.4814, 151.853, 431.427, 489.92, -41.1713, 121.91, 28.8734, -73.2528, 704.512, 497.203, -54.0039, 3.74285, 125.118, -12.8326, 802.823, 420.739, -66.8365, 44.9141, 75.3916, -70.5794, 806.464, 218.656, 0, 0, 34.755, 64.6978, 973.956, 295.12, 0, 0, 0, 0, 1039.5, 362.481 )
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 72.5627, -181.904, 874.994, 601.695, 0, 0, -171.155, 39.8034, 734.178, 427.921, 0, 0, -77.0499, -53.1498, 485.501, 433.913, 0, 0, -127.154, 88.3016, 370.151, 436.909, 0, 0, 12.6145, -99.9069, 269.782, 384.478, 0, 0, 124.631, -91.8336, 325.21, 258.641, 0, 0, 108.485, 31.7886, 504.976, 182.241, 0, 0, 59.0359, -63.5771, 734.178, 147.786, 0, 0, 0, 0, 630.812, 3.97271 )
}

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, -83.4927, -1.04366, 1033.88, 244.734, -5.2183, -33.3971, 4.17464, 88.711, 956.753, 319.937, 0, 0, -108.541, -79.3181, 850.698, 366.215, 0, 0, -112.715, 158.636, 681.01, 410.565, 0, 0, -55.3139, -125.239, 482.398, 418.279, 0, 0, -165.942, -40.7027, 374.415, 296.797, 0, 0, 114.802, -57.4012, 474.685, 142.536, 0, 0, 92.8857, 93.9293, 719.576, 156.033, 0, 0, -63.6632, 37.5717, 640.517, 333.435, 0, 0, -67.8378, 15.6549, 509.394, 389.354, 0, 0, -194.121, 11.4802, 401.411, 404.781, 0, 0, -104.366, 14.6112, 154.592, 431.776, 0, 0, -16.6985, -19.8295, 38.8956, 402.852, 0, 0, 0, 0, 9.97157, 391.283 )
}

[node name="enemy_movement" type="Node"]

script = ExtResource( 1 )

[node name="path_0" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( -6.85327, -1.37067 )
curve = SubResource( 1 )

[node name="path_1" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 2 )

[node name="path_2" type="Path2D" parent="." index="2"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 3 )

[node name="path_3" type="Path2D" parent="." index="3"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 4 )

[node name="path_4" type="Path2D" parent="." index="4"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 5 )

[node name="path_5" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( -6.85327, -1.37067 )
curve = SubResource( 6 )


